--- a/seminar_presentation__intelligent_industrial_robots.tex
+++ b/seminar_presentation__intelligent_industrial_robots.tex
@@ -127,6 +127,7 @@
         \item Common controller in automation are~\acrfull{acn:PLC}.
         \item They are programmed in a static and non-flexible manner.
     \end{itemize}
+	\pause
     $\Rightarrow $ Are there ways to program a~\acrshort{acn:PLC} in a more flexible way ?
     
 \end{frame}
@@ -322,8 +323,9 @@ GX\left(V > \_V \rightarrow OldValCond \land FiringCond \land V := NewValExpr \r
     \item This requires a clear assessment of possible risks.
     \item Automatic generation of source code has inherent risks.
 \end{itemize}
+\pause
 $\Rightarrow$ They need to be addressed before the system can be deployed.
-
+\pause
 Two components of the risk are addressed:
 \begin{itemize}
     \item Transformation function correctness
