Add figure to plcSpecif

--- a/seminar_presentation__intelligent_industrial_robots.tex
+++ b/seminar_presentation__intelligent_industrial_robots.tex
@@ -235,13 +235,22 @@ In the following section I present these formalizations:
 \end{frame}
 
 \begin{frame}{plcSpecif}
-    \begin{itemize}
-        \item Developed by \cite{7819191}.
-        \item Module based specification.
-        \item Verification methods are presented.
-        \item Focus on ease of use \& traceability.
-        \item Reliability as a core feature.
-    \end{itemize}
+ 	\begin{columns}
+ 		\begin{column}{0.5\textwidth}
+ 			\begin{itemize}
+ 				\item Developed by \cite{7819191}.
+ 				\item Module based specification.
+ 				\item Verification methods are presented.
+ 				\item Focus on ease of use \& traceability.
+ 				\item Reliability as a core feature.
+ 			\end{itemize}
+ 		\end{column}
+	 	\begin{column}{0.5\textwidth}
+	 		\centering
+	 		\includegraphics[width=0.6\textwidth]{./figures/plcspecif.png}
+	 		{\footnotesize  Source:~\cite{darvas2015formal}}
+	 	\end{column}
+ 	\end{columns}
 \end{frame}
 
 \section{Risks of automated programming}
